--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   gradient_borders: ^1.0.0
   adaptive_theme: ^3.1.1
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
